# frostbound

./: .gitignore  .mypy.ini  .ruff.toml  Makefile  README.md  pyproject.toml  pyrightconfig.json
frostbound/experiments/: __init__.py  builder.py  experiment.py  models.py
frostbound/instrumentation/: timer.py
frostbound/proxy/: immutable.py
frostbound/pydanticonf/: __init__.py  base.py  factory.py  loader.py  registry.py  types.py
frostbound/resilience/: circuit_breaker.py  retry.py
frostbound/types/: maybe.py
